[package]
name = "http-is-alive-shared"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my-http-server = { branch = "0.2.7", git = "https://github.com/MyJetTools/my-http-server.git" }
is-alive-middleware = { branch = "0.1.3", git = "https://github.com/ReachPay/is-alive-middleware.git" }
rust-extensions = { branch = "0.1.1", git = "https://github.com/MyJetTools/rust-extensions.git" }
my-logger = { branch = "0.2.0", git = "https://github.com/MyJetTools/my-logger.git" }
async-trait = "*"
serde = { version = "*", features = ["derive"] }
