[package]
name = "http-is-alive-shared"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my-http-server = { tag = "0.3.0", git = "https://github.com/MyJetTools/my-http-server.git" }
is-alive-middleware = { tag = "0.3.0", git = "https://github.com/ReachPay/is-alive-middleware.git" }
rust-extensions = { tag = "0.1.2", git = "https://github.com/MyJetTools/rust-extensions.git" }
my-logger = { tag = "0.2.0", git = "https://github.com/MyJetTools/my-logger.git" }
async-trait = "*"
serde = { version = "*", features = ["derive"] }
